# dtcm-test

./: .gitignore  Makefile  configure.ac  ctest.odt
src/: Makefile.am  exercicio1.c  exercicio2.c  exercicio3.c  exercicio4.c  exercicioII3.c  linkedlist.c  linkedlist.h  quicksort.c  quicksort.h  sort.h  statemachine.h  statemachine_logic.c  statemachine_table.c
src/libsort/: Makefile.am  coverage.sh  insertionsort.c  mergesort.c  quicksort.c
