bin_PROGRAMS = exercicio1 exercicio2 exercicio3

AM_CPPFLAGS = -Wall -Wextra -Wshadow -Wswitch-default -Wfloat-equal \
-Wcast-qual -Wconversion -pedantic-errors -ansi

exercicio1_SOURCES = exercicio1.c
exercicio2_SOURCES = exercicio2.c quicksort.h quicksort.c
exercicio3_SOURCES = exercicio3.c statemachine.h statemachine_logic.c statemachine_table.c
